--- a/EDA Part.ipynb
+++ b/EDA Part.ipynb
@@ -512,7 +512,7 @@
    "metadata": {},
    "source": [
     "Above are some basic analysis for our data. It helps us to understand more details about each feature and what kind of issues we might need to consider when we build models.  \n",
-    "Then we will "
+    "Then we will do the data manipulation before building models."
    ]
   }
  ],
